[project]
name = "toss-sleeve"
version = "0.1.1"
description = "Toss Securities Open API 브로커 + 공유계좌 sleeve 가상현금 원장 (프로젝트 무관 프리미티브)"
readme = "README.md"
requires-python = ">=3.12"
# 런타임 의존은 httpx 하나(REST). 영속 원장은 stdlib sqlite3 를 쓴다(추가 의존 없음).
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toss_sleeve"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: 실 Toss API 호출(자격증명·IP 허용목록 필요) — 기본 skip"]
addopts = "-m 'not integration'"
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
